--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
+@font-face {
+  font-family: "Pudelinka";
+  src: url("Fonts/pudelinka.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
 body{
-	background-color: #d2b48c;
-	margin-left: 20%;
-	margin-right: 20%;
-	border: 2px dotted black;
-	padding: 10px 10px 10px 10px;
-	font-family: sans serif;
-    }
+  background-color: #028cb4;
+  margin-left: 20%;
+  margin-right: 20%;
+  border: 2px dotted black;
+  padding: 10px 10px 10px 10px;
+  font-family: sans-serif;
+}
+blockquote.q {
+  color: #D4AF67;
+  border-left: 4px solid #8B0000;
+  font-style: italic;
+}
+p.quote {font-family: "Pudelinka", cursive;}
