--- a/style.css
+++ b/style.css
@@ -18,3 +18,18 @@ blockquote.q {
   font-style: italic;
 }
 p.quote {font-family: "Pudelinka", cursive;}
+body{
+	background-color: #d2b48c;
+	margin-left: 20%;
+	margin-right: 20%;
+	border: 2px dotted black;
+	padding: 10px 10px 10px 10px;
+	font-family: sans serif;
+    body{
+	background-color: #d2b48c;
+	margin-left: 20%;
+	margin-right: 20%;
+	border: 2px dotted black;
+	padding: 10px 10px 10px 10px;
+	font-family: sans serif;
+    }
