--- a/style.css
+++ b/style.css
@@ -38,4 +38,10 @@ blockquote.q {
 	border-left: 4px solid #8B0000;
 	font-style: italic;
 }
+	@font-face {
+	font-family: “Pudelinka”;
+	src: url(”Fonts/pudelinka.ttf” ) format('truetype’);
+	font-weight: normal;
+	font-style: normal;
+}
 
