--- a/style.css
+++ b/style.css
@@ -44,5 +44,5 @@ blockquote.q {
 	font-weight: normal;
 	font-style: normal;
 }
-p.zz{front-family: "Pudelinka";}
+p.zz{font-family: "Pudelinka";}
 	
